# rs-nics2arrow-ipc-stream

./: Cargo.toml  README.md  build.sh  example.sh  nics2arrow-ipc-stream
src/: lib.rs
